# excel_protector

./: README.md  pyproject.toml
excel_protector/: main.py
tests/: test_excel.xlsx  test_excel_protected.xlsx
